cmake_minimum_required( VERSION 3.10 )
set(CMAKE_CXX_STANDARD 17)
project( cpp-tools VERSION 1.0 )

if (UNIX AND NOT APPLE)
    add_subdirectory( lib )
    set(SUB_LIBS PrintSrc TerminalUtil TimeChecker)
    foreach(LIB_ITEM ${SUB_LIBS})
        set(LIB_LIST ${LIB_LIST} $<TARGET_OBJECTS:${LIB_ITEM}>)
    endforeach()
    add_library(CppTool STATIC ${LIB_LIST})
elseif(APPLE)
    add_subdirectory( lib )
    set(SUB_LIBS PrintSrc TerminalUtil TimeChecker)
    foreach(LIB_ITEM ${SUB_LIBS})
        set(LIB_LIST ${LIB_LIST} $<TARGET_OBJECTS:${LIB_ITEM}>)
    endforeach()
    add_library(CppTool STATIC ${LIB_LIST})
else()
    message(FATAL_ERROR "This project is linux project")
endif()